# django-liveops

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
design/: README.md  implementation-plan.md  spec-live-operations.md
design/specs/: 2026-07-03-live-operations-list-design.md
docs/: api-reference.md  architecture.md  concepts.md  deployment.md  getting-started.md  index.md  security.md  stages-and-chaining.md  testing.md  text-mode.md  tutorial.md
example/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
example/demo/: admin.py  forms.py  models.py  urls.py  views.py
example/demo/locale/de/LC_MESSAGES/: django.mo  django.po
example/demo/locale/et/LC_MESSAGES/: django.mo  django.po
example/demo/locale/fr/LC_MESSAGES/: django.mo  django.po
example/demo/locale/ja/LC_MESSAGES/: django.mo  django.po
example/demo/locale/lt/LC_MESSAGES/: django.mo  django.po
example/demo/locale/pl/LC_MESSAGES/: django.mo  django.po
example/demo/locale/uk/LC_MESSAGES/: django.mo  django.po
example/demo/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
example/demo/management/commands/: seed_demo.py
example/demo/migrations/: 0003_demoimport_label.py  0004_chainend_chainstart_failingtask_quicktask_and_more.py
example/demo/templates/: base.html
example/demo/templates/demo/: demo_create.html  demo_index.html  demoimport_create.html  demoimport_result.html  done.html  generic_result.html  live.html  operations.html
example/demo/templates/registration/: login.html
example/demo_project/: asgi.py  settings.py  urls.py
live_operations/: admin.py  apps.py  models.py  progress.py  tasks.py
live_operations/locale/de/LC_MESSAGES/: django.po
live_operations/locale/et/LC_MESSAGES/: django.po
live_operations/locale/fr/LC_MESSAGES/: django.po
live_operations/locale/ja/LC_MESSAGES/: django.mo  django.po
live_operations/locale/lt/LC_MESSAGES/: django.po
live_operations/locale/pl/LC_MESSAGES/: django.mo  django.po
live_operations/locale/uk/LC_MESSAGES/: django.mo  django.po
live_operations/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
live_operations/templates/live_operations/: _regions.html  _stages.html
liveops/: __init__.py  admin.py  apps.py  conf.py  consumers.py  models.py  naming.py  notifications.py  progress.py  rendering.py  routing.py  runner.py  security.py  tasks.py  urls.py  views.py
liveops/management/commands/: run_liveop.py
liveops/static/liveops/: liveops.css  liveops.js
liveops/templates/liveops/: _cancelled.html  _error.html  _live_operation.html  _operation_list_table.html  _regions.html  _result.html  _stages.html  operation.html  operation_list.html
liveops/templatetags/: liveops.py
tests/: models.py  root_urls.py  settings.py  test_admin.py  test_celery_autodiscover.py  test_chain.py  test_consumer.py  test_i18n_runtime.py  test_live_list.py  test_models.py  test_naming.py  test_progress_text.py  test_progress_web.py  test_roundtrip.py  test_run_liveop.py  test_runner.py  test_security.py  test_smoke.py  test_stages.py  test_static_css.py  test_static_js.py  test_templatetag.py  test_views.py  urls.py  views.py
(+16 files in other folders)
